# gedit-scrollpaste

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  compile.sh  configure.ac  osx-build.sh
po/: LINGUAS  POTFILES.in
src/: Makefile.am  scrollpaste-plugin.c  scrollpaste-plugin.h  scrollpaste.gedit-plugin.desktop.in
